# paxBalancer

./: .gitignore  CMakeLists.txt  README.md
include/: config.hpp
scripts/: run_demo.sh
src/: backend_server.cpp  client.cpp  load_balancer.cpp
